# mcpr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_SSE_TRANSPORT.md
examples/: README.md  concurrent_client.rs  echo_server.rs  interactive_client.rs  sse_mcp_server.rs  sse_server.rs  sse_server_mode.rs  websocket_server.rs
examples/browser_search/: README.md  client.rs  server.rs
examples/direct_web_scraper/: README.md  direct_web_scraper.rs
examples/github-tools/: Cargo.toml  README.md  client_output.txt  test.sh
examples/github-tools/client/: Cargo.toml
examples/github-tools/client/src/: main.rs
examples/github-tools/server/: .env.example  Cargo.toml
examples/github-tools/server/src/: main.rs
examples/github-tools/server/src/tools/: mod.rs  readme_query.rs  repo_search.rs
examples/mcp_web_scraper/: README.md  mcp_web_scraper_client.rs  mcp_web_scraper_socket.rs  run_mcp_web_scraper_client.sh
examples/simple/: README.md  client.rs  server.rs
examples/tool_caller/: README.md  llm_tool_caller.rs  run_llm_tool_caller.sh  standalone_tool_caller.rs
examples/web_scraper_search/: Cargo.toml  README.md  test_web_scraper_search.sh
examples/web_scraper_search/src/: client.rs  common.rs  server.rs
scripts/browser_search/: run_browser_search.sh
scripts/direct_web_scraper/: run_direct_web_scraper.sh
scripts/mcp_web_scraper/: run_interactive_mcp_client.sh  run_interactive_mcp_web_scraper.sh  run_mcp_web_scraper.sh  run_mcp_web_scraper_socket.sh  test_mcp_web_scraper.sh
scripts/tool_caller/: run_standalone_tool_caller.sh
scripts/web_scrape/: README.md  run_web_scrape.sh
src/: client.rs  error.rs  lib.rs  main.rs  server.rs
src/generator/: mod.rs  templates.rs
src/generator/templates/: mod.rs  mod.rs.bak  sse.rs  stdio.rs
src/schema/: common.rs  json_rpc.rs  server.rs
src/transport/: mod.rs  sse.rs  sse_tests.rs  stdio.rs  websocket.rs
src/transport/sse/: client.rs  mod.rs  server.rs  session.rs  sse_stream.rs
tests/: project_generator_test.rs  sse_e2e_test.rs  sse_server_test.rs  template_tests.rs
