[package]
name = "mcpr"
version = "0.2.3"
edition = "2021"
description = "Rust implementation of Anthropic's Model Context Protocol"
authors = ["Chetan Conikee"]
license = "MIT"
repository = "https://github.com/conikeec/mcpr"
readme = "README.md"
keywords = ["mcp", "anthropic", "claude", "ai", "llm"]
categories = ["api-bindings", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "MCP.md",
    ".github/workflows/rust.yml",
]

[lib]
name = "mcpr"
path = "src/lib.rs"

[[bin]]
name = "mcpr"
path = "src/main.rs"

# Core dependencies for the mcpr library
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
url = "2.2.2" # Using 2.2.2 for compatibility with examples
tiny_http = "0.12"
reqwest = { version = "0.12", features = [
    "json",
    "default-tls",
    "blocking",
    "stream",
] } # Temporarily keeping blocking for transitional period
rand = "0.8"
tungstenite = { version = "0.20", features = ["native-tls"] }
tokio-tungstenite = "0.20" # Added for WebSocket async support
chrono = "0.4" # For timestamp handling in examples
tokio-util = { version = "0.7", features = ["io"] } # For SSE E2E tests
uuid = { version = "1.16.0", features = ["v4"] }

# Optional dependencies that are only used by specific features
[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
