[package]
name = "github-tools-test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-client"
path = "test_client.rs"

[[bin]]
name = "test-client-connect"
path = "test_client_connect.rs"

[dependencies]
mcpr = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
