[package]
name = "github-tools-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For local development, use path dependency:
mcpr = { path = "../../../" }
# For production, use version from crates.io:
# mcpr = "0.2.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
ratatui = "0.24.0"
crossterm = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
colored = "2.0"
indicatif = "0.17.7"
console = "0.15.7"
dialoguer = "0.11.0"
unicode-width = "0.1.10"
