[package]
name = "github-tools-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for github-tools project with stdio transport"

[dependencies]
# For local development, use path dependency:
mcpr = { path = "../../../" }
# For production, use version from crates.io:
# mcpr = "0.2.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.13"
anyhow = "1.0"
dotenv = "0.15"
